--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
 <style>
     body {
         height: 100vh;
-        background-color: black;
-        background-image: url(imagens/wallpaper002.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
+        background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
         background-size: cover;
     }
 
     main {
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         margin: auto;
         padding: 10px;
         border: 1px solid darkblue;
@@ -30,6 +27,22 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolor voluptates totam deleniti, nesciunt, a pariatur libero sit nisi, provident eum officiis accusamus non vero placeat. Saepe quia quaerat quod?</p>
+
     </main>
 </body>
 </html>
