--- a/desafios/desafio04/index.html
+++ b/desafios/desafio04/index.html
@@ -11,7 +11,7 @@
     <h1>God's Plan</h1>
     <p>Por <a href="https://pt.wikipedia.org/wiki/Drake_(m%C3%BAsico)" target="_blank" rel="external">Drake</a></p>
     </header>
-    <section>
+    <section class="normal">
         <p>
             And, they wishin' and wishin' and wishin' and wishin'  <br>
             They wishin' on me, yeah <br> 
@@ -27,7 +27,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             God's plan, God's plan <br>
             I hold back, sometimes I won't, yeah <br>
@@ -40,8 +40,8 @@
         </p>
     </section>
 
-    <section>
-        <p>
+    <section class="normal">
+            <p>
             Bad things <br>
             It's a lot of bad things <br>
             That they wishin' and wishin' and wishin' and wishin' <br>
@@ -51,8 +51,11 @@
             That they wishin' and wishin' and wishin' and wishin' <br>
             They wishin' on me <br>
             Yeah, ayy, ayy (ayy) <br>
-        </p>
-        <p>
+            </p>
+    </section>
+
+    <section class="imagem">
+            <p>
             She say, "Do you love me?" I tell her, "Only partly <br>
             I only love my bed and my momma, I'm sorry" <br>
             Fifty Dub, I even got it tatted on me <br>
@@ -61,10 +64,10 @@
             Turn a O2 into the O3, dog <br>
             Without 40, Oli', there'd be no me <br>
             'Magine if I never met the broskis
-        </p>
+            </p>
     </section>
 
-    <section>
+    <section class="normal">
             <p>
                 God's plan, God's plan <br>
                 I can't do this on my own, ayy, no, ayy <br>
@@ -75,6 +78,9 @@
                 I make sure that north side eat, yuh <br>
                 And still <br>
             </p>
+    </section>
+
+    <section class="imagem">
             <p>
                 Bad things <br>
                 It's a lot of bad things <br>
