--- a/desafios/desafio04/index.html
+++ b/desafios/desafio04/index.html
@@ -27,7 +27,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             God's plan, God's plan <br>
             I hold back, sometimes I won't, yeah <br>
@@ -54,7 +54,7 @@
             </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
             <p>
             She say, "Do you love me?" I tell her, "Only partly <br>
             I only love my bed and my momma, I'm sorry" <br>
@@ -80,7 +80,7 @@
             </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img03">
             <p>
                 Bad things <br>
                 It's a lot of bad things <br>
