--- a/desafios/desafio04/index.html
+++ b/desafios/desafio04/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>God's Plan</title>
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="estilo/style.css">
 <body>
     <header>
     <h1>God's Plan</h1>
