--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,22 +11,19 @@
     }
 
     table {
+        height: 400px;
         width: 400px;
         border-collapse: collapse;
-    }
-
-    tr.linha {
-        background-color: gray;
     }
 
     td {
         border: 1px solid black;
         padding: 8px;
+        text-align: center;
+        vertical-align: middle;
     }
 
-    td.dado {
-        background-color: yellow;
-    }
+
 </style>
 <body>
     <h1>Minha primeira tabela</h1>
