--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo eveniet natus sed veritatis nostrum incidunt mollitia odit quas eum totam, odio excepturi. Corrupti quas natus at assumenda, pariatur beatae totam?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt dolorum delectus est veritatis quod tempore repellendus cum sequi voluptas hic unde consequuntur molestias quia libero quam incidunt, perferendis ad earum!</p>
 </body>
